--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Conference Badge Print</title>
     <style>
+        body {
+            padding: 0;
+            margin: 0;
+        }
         #app {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
-            grid-template-rows: 100vh;
-            height: 100vh;
+            height: 90vh;
         }
     </style>
 </head>
