--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,100 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Conference Badge Print</title>
     <style>
-        body {
+        @import 'fonts/roboto-v15-latin_latin-ext-300.ttf';
+        @import 'fonts/77d20e854ae4e4e2.jpg';
+        @import 'fonts/roboto-v15-latin_latin-ext-500.ttf';
+        @import 'fonts/roboto-v15-latin_latin-ext-regular.ttf';
+
+        header, nav, footer {
+            background-color: beige;
         }
+
+        #control {
+            grid-area: content;
+            padding: 0 1em;
+            overflow: auto;
+        }
+
+        #preview {
+            grid-area: preview;
+        }
+
+        #preview iframe {
+            height: 100%;
+            width: 100%;
+            padding: 0;
+            border-width: 0;
+        }
+
+        footer {
+            grid-area: footer;
+            padding: 1em 2em;
+            overflow: hidden;
+        }
+
+        header {
+            grid-area: header;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 1em;
+        }
+
+        header h1, header h2 {
+            margin-top: 0;
+            margin-bottom: 0;
+        }
+
+        nav {
+            grid-area: nav;
+        }
+        nav h3 {
+            margin-left: 1em;
+        }
+
+        body {
+            margin: 0;
+            padding: 0;
+        }
+
         #app {
             display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            height: 90vh;
+            grid-template-areas:
+                    "header header header"
+                    "nav content preview"
+                    "footer footer footer";
+            grid-template-columns: minmax(auto, 15em) 1fr 1fr;
+            grid-template-rows: auto 1fr auto;
+            grid-gap: 10px;
+            height: 100vh;
+        }
+        @media (max-width: 1070px) {
+            #app {
+                grid-template-areas:
+                        "header header"
+                        "content preview"
+                        "footer footer";
+                grid-template-columns: 1fr 1fr;
+                grid-template-rows: auto 1fr minmax(auto, 5em);
+            }
+            nav {
+                display: none;
+            }
+        }
+        @media (max-width: 900px) {
+            #app {
+                grid-template-areas:
+                        "header"
+                        "content"
+                        "preview"
+                        "footer";
+                grid-template-columns: 1fr;
+                grid-template-rows: auto 1fr 1fr minmax(auto, 4em);
+            }
+            header {
+                flex-direction: column;
+            }
         }
     </style>
 </head>
